@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -27,7 +26,7 @@ public class ObjectAroundVillageService {
         List<ObjectAroundVillage> objectAroundVillages = objectAroundVillageRepository.findAll();
         return objectAroundVillages.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ObjectAroundVillageDTO getObjectAroundVillageById(Long id) {
@@ -51,15 +50,15 @@ public class ObjectAroundVillageService {
     }
 
 
-    public ObjectAroundVillageDTO updateObjectAroundVillage(Long id, ObjectAroundVillage objectAroundVillage) {
+    public ObjectAroundVillageDTO updateObjectAroundVillage(Long id, ObjectAroundVillageDTO objectAroundVillageDTO) {
         Optional<ObjectAroundVillage> findObjectAroundVillage = objectAroundVillageRepository.findById(id);
         if (findObjectAroundVillage.isEmpty()) {
             throw new ApiRequestException("Object Around Village with id: " + id + " Not Found");
         }
-        if (objectAroundVillageRepository.existsByType(objectAroundVillage.getType())) {
-            throw new ApiRequestException("Object Around Village with type: " + objectAroundVillage.getType() + " already exists");
+        if (objectAroundVillageRepository.existsByType(objectAroundVillageDTO.getType())) {
+            throw new ApiRequestException("Object Around Village with type: " + objectAroundVillageDTO.getType() + " already exists");
         }
-        findObjectAroundVillage.get().setType(objectAroundVillage.getType());
+        findObjectAroundVillage.get().setType(objectAroundVillageDTO.getType());
         objectAroundVillageRepository.save(findObjectAroundVillage.get());
         return convertToDTO(findObjectAroundVillage.get());
     }
@@ -71,6 +70,14 @@ public class ObjectAroundVillageService {
             throw new ApiRequestException("Object Around Village not found for id " + id);
         }
         objectAroundVillageRepository.delete(objectAroundVillage.get());
+    }
 
+    public ObjectAroundVillage checkObject(Long id) {
+        Optional<ObjectAroundVillage> objectAroundVillage = objectAroundVillageRepository.findById(id);
+        if (objectAroundVillage.isPresent()){
+            return objectAroundVillage.get();
+        }else {
+            throw new ApiRequestException("Object Around Village not found");
+        }
     }
 }
