@@ -7,12 +7,10 @@ import com.example.ludogorieSoft.village.model.PopulatedAssertion;
 import com.example.ludogorieSoft.village.repositories.PopulatedAssertionRepository;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -30,12 +28,20 @@ public class PopulatedAssertionService {
         return populations
                 .stream()
                 .map(this::toPopulatedAssertionDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public PopulatedAssertionDTO createPopulatedAssertion(PopulatedAssertion population) {
-        populatedAssertionRepository.save(population);
-        return toPopulatedAssertionDTO(population);
+    public PopulatedAssertionDTO createPopulatedAssertion(PopulatedAssertionDTO populatedAssertionDTO) {
+
+        if (populatedAssertionRepository.existsByPopulatedAssertionName(populatedAssertionDTO.getPopulatedAssertionName())) {
+            throw new ApiRequestException("PopulatedAssertion with name: " + populatedAssertionDTO.getPopulatedAssertionName() + " already exists");
+        }
+        PopulatedAssertion populatedAssertion = new PopulatedAssertion();
+        populatedAssertion.setPopulatedAssertionName(populatedAssertionDTO.getPopulatedAssertionName());
+
+        populatedAssertionRepository.save(populatedAssertion);
+
+        return toPopulatedAssertionDTO(populatedAssertion);
     }
 
     public PopulatedAssertionDTO getPopulatedAssertionById(Long id) {
@@ -46,24 +52,33 @@ public class PopulatedAssertionService {
         return toPopulatedAssertionDTO(population.get());
     }
 
-    public int deletePopulatedAssertionById(Long id) {
-        try {
-            populatedAssertionRepository.deleteById(id);
-            return 1;
-        } catch (EmptyResultDataAccessException e) {
-            return 0;
+    public void deletePopulatedAssertionById(Long id) {
+        Optional<PopulatedAssertion> populatedAssertion = populatedAssertionRepository.findById(id);
+        if (populatedAssertion.isEmpty()) {
+            throw new ApiRequestException("PopulatedAssertion not found for id " + id);
         }
+        populatedAssertionRepository.delete(populatedAssertion.get());
     }
 
-    public PopulatedAssertionDTO updatePopulatedAssertion(Long id, PopulatedAssertion population) {
+    public PopulatedAssertionDTO updatePopulatedAssertion(Long id, PopulatedAssertionDTO populationDTO) {
         Optional<PopulatedAssertion> findPopulatedAssertion = populatedAssertionRepository.findById(id);
         if (findPopulatedAssertion.isEmpty()) {
             throw new ApiRequestException("Populated Assertion not found!");
         }
-        findPopulatedAssertion.get().setPopulatedAssertion(population.getPopulatedAssertion());
-
-
+        if (populatedAssertionRepository.existsByPopulatedAssertionName(populationDTO.getPopulatedAssertionName())) {
+            throw new ApiRequestException("PopulatedAssertion with name: " + populationDTO.getPopulatedAssertionName() + " already exists");
+        }
+        findPopulatedAssertion.get().setPopulatedAssertionName(populationDTO.getPopulatedAssertionName());
         populatedAssertionRepository.save(findPopulatedAssertion.get());
         return toPopulatedAssertionDTO(findPopulatedAssertion.get());
+    }
+
+    public PopulatedAssertion checkPopulatedAssertion(Long id) {
+        Optional<PopulatedAssertion> populatedAssertion = populatedAssertionRepository.findById(id);
+        if (populatedAssertion.isPresent()){
+            return populatedAssertion.get();
+        }else {
+            throw new ApiRequestException("Populated Assertion not found");
+        }
     }
 }
