@@ -5,13 +5,13 @@ import com.example.ludogorieSoft.village.model.Question;
 import com.example.ludogorieSoft.village.repositories.QuestionRepository;
 import com.example.ludogorieSoft.village.exeptions.ApiRequestException;
 import lombok.AllArgsConstructor;
+import org.apache.commons.lang.StringUtils;
 import org.modelmapper.ModelMapper;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 @AllArgsConstructor
@@ -27,13 +27,23 @@ public class QuestionService {
         List<Question> questions = questionRepository.findAll();
         return questions.stream()
                 .map(this::questionToQuestionDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public QuestionDTO createQuestion(Question question) {
+
+    public QuestionDTO createQuestion(QuestionDTO questionDTO) {
+        if (StringUtils.isBlank(questionDTO.getQuestion())) {
+            throw new ApiRequestException("Question is blank");
+        }
+        if (questionRepository.existsByQuestionName(questionDTO.getQuestion())) {
+            throw new ApiRequestException("Question: " + questionDTO.getQuestion() + " already exists");
+        }
+        Question question = new Question();
+        question.setQuestionName(questionDTO.getQuestion());
         questionRepository.save(question);
         return questionToQuestionDTO(question);
     }
+
 
     public QuestionDTO getQuestionById(Long id) {
         Optional<Question> question = questionRepository.findById(id);
@@ -43,22 +53,42 @@ public class QuestionService {
         return questionToQuestionDTO(question.get());
     }
 
-    public int deleteQuestionById(Long id) {
-        try {
-            questionRepository.deleteById(id);
-            return 1;
-        } catch (EmptyResultDataAccessException e) {
-            return 0;
+    public void deleteQuestionById(Long id) {
+        Optional<Question> question = questionRepository.findById(id);
+        if (question.isEmpty()) {
+            throw new ApiRequestException("Question not found for id " + id);
         }
+        questionRepository.delete(question.get());
     }
 
-    public QuestionDTO updateQuestion(Long id, Question question) {
+
+    public QuestionDTO updateQuestion(Long id, QuestionDTO questionDTO) {
         Optional<Question> findQuestion = questionRepository.findById(id);
-        if (findQuestion.isEmpty()) {
+        Question question = findQuestion.orElseThrow(() -> new ApiRequestException("Question not found"));
+
+        if (questionDTO == null || questionDTO.getQuestion() == null || questionDTO.getQuestion().isEmpty()) {
+            throw new ApiRequestException("Invalid question data");
+        }
+
+        String newQuestionName = questionDTO.getQuestion();
+        if (!newQuestionName.equals(question.getQuestionName())) {
+            if (questionRepository.existsByQuestionName(newQuestionName)) {
+                throw new ApiRequestException("Question: " + newQuestionName + " already exists");
+            }
+            question.setQuestionName(newQuestionName);
+            questionRepository.save(question);
+        }
+
+        return questionToQuestionDTO(question);
+    }
+
+
+    public Question checkQuestion(Long id) {
+        Optional<Question> question = questionRepository.findById(id);
+        if (question.isPresent()) {
+            return question.get();
+        } else {
             throw new ApiRequestException("Question not found");
         }
-        findQuestion.get().setQuestion(question.getQuestion());
-        questionRepository.save(findQuestion.get());
-        return questionToQuestionDTO(findQuestion.get());
     }
 }
