@@ -12,10 +12,9 @@ import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 @AllArgsConstructor
@@ -25,6 +24,9 @@ public class VillageGroundCategoryService {
     private final VillageRepository villageRepository;
     private final GroundCategoryRepository groundCategoryRepository;
     private final ModelMapper modelMapper;
+    private final VillageService villageService;
+    private final GroundCategoryService groundCategoryService;
+    private final  String errorMessage="Village not found";
 
     public VillageGroundCategoryDTO toDTO(VillageGroundCategory forMap) {
         return modelMapper.map(forMap, VillageGroundCategoryDTO.class);
@@ -35,7 +37,7 @@ public class VillageGroundCategoryService {
         List<VillageGroundCategory> villageGroundCategories = villageGroundCategoryRepository.findAll();
         return villageGroundCategories.stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public VillageGroundCategoryDTO getByID(Long id) {
@@ -47,18 +49,13 @@ public class VillageGroundCategoryService {
     }
     public VillageGroundCategoryDTO createVillageGroundCategoryDTO(VillageGroundCategoryDTO villageGroundCategoryDTO) {
         VillageGroundCategory villageGroundCategory = new VillageGroundCategory();
-        Optional<Village> village = villageRepository.findById(villageGroundCategoryDTO.getVillageId());
-        if (village.isPresent()){
-            villageGroundCategory.setVillage(village.get());
-        }else {
-            throw new ApiRequestException("Village not found");
-        }
-        Optional<GroundCategory> groundCategory = groundCategoryRepository.findById(villageGroundCategoryDTO.getGroundCategoryId());
-        if (groundCategory.isPresent()){
-            villageGroundCategory.setGroundCategory(groundCategory.get());
-        }else {
-            throw new ApiRequestException("GroundCategory not found");
-        }
+
+        Village village = villageService.checkVillage(villageGroundCategoryDTO.getVillageId());
+        villageGroundCategory.setVillage(village);
+
+        GroundCategory groundCategory = groundCategoryService.checkGroundCategory(villageGroundCategoryDTO.getGroundCategoryId());
+        villageGroundCategory.setGroundCategory(groundCategory);
+
         villageGroundCategoryRepository.save(villageGroundCategory);
         return toDTO(villageGroundCategory);
     }
@@ -69,18 +66,13 @@ public class VillageGroundCategoryService {
         if (foundVillageGroundCategory.isEmpty()) {
             throw new ApiRequestException("Village Ground Category Not Found");
         }
-        Optional<Village> village = villageRepository.findById(villageGroundCategoryDTO.getVillageId());
-        if (village.isPresent()){
-            foundVillageGroundCategory.get().setVillage(village.get());
-        }else {
-            throw new ApiRequestException("Village not found");
-        }
-        Optional<GroundCategory> groundCategory = groundCategoryRepository.findById(villageGroundCategoryDTO.getGroundCategoryId());
-        if (groundCategory.isPresent()){
-            foundVillageGroundCategory.get().setGroundCategory(groundCategory.get());
-        }else {
-            throw new ApiRequestException("Village not found");
-        }
+
+        Village village = villageService.checkVillage(villageGroundCategoryDTO.getVillageId());
+        foundVillageGroundCategory.get().setVillage(village);
+
+        GroundCategory groundCategory = groundCategoryService.checkGroundCategory(villageGroundCategoryDTO.getGroundCategoryId());
+        foundVillageGroundCategory.get().setGroundCategory(groundCategory);
+
         villageGroundCategoryRepository.save(foundVillageGroundCategory.get());
         return toDTO(foundVillageGroundCategory.get());
     }
