@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -18,6 +17,8 @@ public class VillageService {
 
     private final VillageRepository villageRepository;
     private final ModelMapper modelMapper;
+    private final String errorMessage1="Village with id ";
+    private final String errorMessage2=" not found  ";
 
 
     public VillageDTO villageToVillageDTO(Village village){
@@ -28,7 +29,7 @@ public class VillageService {
         List<Village> villages = villageRepository.findAll();
         return villages.stream()
                 .map(this::villageToVillageDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -37,7 +38,7 @@ public class VillageService {
         if (optionalVillage.isPresent()) {
             return villageToVillageDTO(optionalVillage.get());
         } else {
-            throw new ApiRequestException("Village with id " + id + " not found");
+            throw new ApiRequestException(errorMessage1 + id + errorMessage2);
         }
     }
 
@@ -58,7 +59,7 @@ public class VillageService {
             villageRepository.save(village);
             return modelMapper.map(village, VillageDTO.class);
         } else {
-            throw new ApiRequestException("Village with id " + id + " not found");
+            throw new ApiRequestException(errorMessage1 + id + errorMessage2);
         }
     }
 
@@ -67,9 +68,16 @@ public class VillageService {
         if (villageRepository.existsById(id)) {
             villageRepository.deleteById(id);
         } else {
-            throw new ApiRequestException("Village with id " + id + " not found");
+            throw new ApiRequestException(errorMessage1 + id + errorMessage2);
         }
     }
-
+    public Village checkVillage(Long id){
+        Optional<Village> village = villageRepository.findById(id);
+        if (village.isPresent()){
+            return village.get();
+        }else {
+            throw new ApiRequestException("Village not found");
+        }
+    }
 
 }
